--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,13 +11,58 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 		
-		<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-			android:id="@+id/main_swipe_refresh_layout"
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:id="@+id/main_layout_nothing"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
+			
+			<ImageView
+				android:id="@+id/imageView3"
+				android:layout_width="100dp"
+				android:layout_height="100dp"
+				android:src="@drawable/ic_baseline_public_24"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintVertical_bias="0.42"/>
+			
+			<TextView
+				android:id="@+id/textView7"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="16dp"
+				android:text="Be the first"
+				android:textSize="24sp"
+				android:textStyle="bold"
+				app:layout_constraintEnd_toEndOf="@+id/imageView3"
+				app:layout_constraintStart_toStartOf="@+id/imageView3"
+				app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
+			
+			<TextView
+				android:id="@+id/textView8"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Tell the rest"
+				android:textSize="24sp"
+				android:textStyle="bold"
+				app:layout_constraintEnd_toEndOf="@+id/textView7"
+				app:layout_constraintStart_toStartOf="@+id/textView7"
+				app:layout_constraintTop_toBottomOf="@+id/textView7"/>
+		</androidx.constraintlayout.widget.ConstraintLayout>
+		
+		<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+			android:id="@+id/main_swipe_refresh_layout"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:visibility="gone"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent">
 			
@@ -38,5 +83,6 @@
 		android:clickable="true"
 		android:contentDescription="@string/app_name_space"
 		android:src="@drawable/ic_baseline_add_24"
+		app:tint="@color/contrast_fab"
 		tools:ignore="ImageContrastCheck"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
