--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="purple_200">#FFBB86FC</color>
-	<color name="purple_500">#FF6200EE</color>
-	<color name="purple_700">#FF3700B3</color>
-	<color name="teal_200">#FF03DAC5</color>
-	<color name="teal_700">#FF018786</color>
-	<color name="black">#FF000000</color>
-	<color name="white">#FFFFFFFF</color>
-	<color name="gray_darker">#772c2c2c</color>
-	<color name="gray_lighter">#222c2c2c</color>
 	<color name="gray">#dd2c2c2c</color>
 	<color name="contrast_background">#FF2c2c2c</color>
 	<color name="contrast_background_2">#FF2c2c2c</color>
@@ -16,4 +7,6 @@
 	<color name="green">#85E64A</color>
 	<color name="normal_text">#D5D5D5</color>
 	<color name="half_transparent_background">#88ffffff</color>
+	
+	<color name="contrast_fab">#000</color>
 </resources>
