--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -11,12 +11,12 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:theme="@style/Theme.MySpaceDemo1.AppBarOverlay">
-
+		
 		<androidx.appcompat.widget.Toolbar
 			android:id="@+id/toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
-			android:background="?attr/colorPrimary"
+			android:background="@color/transparent"
 			app:popupTheme="@style/Theme.MySpaceDemo1.PopupOverlay"/>
 
 	</com.google.android.material.appbar.AppBarLayout>
