--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,66 +11,157 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 		
-		<androidx.constraintlayout.widget.ConstraintLayout
-			android:id="@+id/main_layout_nothing"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintHorizontal_bias="0.5"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
-			
-			<ImageView
-				android:id="@+id/imageView3"
-				android:layout_width="100dp"
-				android:layout_height="100dp"
-				android:src="@drawable/ic_baseline_public_24"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"
-				app:layout_constraintVertical_bias="0.42"/>
-			
-			<TextView
-				android:id="@+id/textView7"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="16dp"
-				android:text="Be the first"
-				android:textSize="24sp"
-				android:textStyle="bold"
-				app:layout_constraintEnd_toEndOf="@+id/imageView3"
-				app:layout_constraintStart_toStartOf="@+id/imageView3"
-				app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
-			
-			<TextView
-				android:id="@+id/textView8"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="Tell the rest"
-				android:textSize="24sp"
-				android:textStyle="bold"
-				app:layout_constraintEnd_toEndOf="@+id/textView7"
-				app:layout_constraintStart_toStartOf="@+id/textView7"
-				app:layout_constraintTop_toBottomOf="@+id/textView7"/>
-		</androidx.constraintlayout.widget.ConstraintLayout>
-		
 		<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
 			android:id="@+id/main_swipe_refresh_layout"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:visibility="gone"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent">
 			
-			<androidx.recyclerview.widget.RecyclerView
-				android:id="@+id/mainList_recyvlerView"
+			<androidx.coordinatorlayout.widget.CoordinatorLayout
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"/>
+				android:layout_height="match_parent">
+				
+				<com.google.android.material.appbar.AppBarLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:background="@color/transparent"
+					app:elevation="0dp">
+					
+					<androidx.appcompat.widget.Toolbar
+						android:layout_width="match_parent"
+						android:layout_height="match_parent"
+						app:layout_scrollFlags="scroll|enterAlways">
+						
+						<androidx.constraintlayout.widget.ConstraintLayout
+							android:id="@+id/main_layout_top"
+							android:layout_width="match_parent"
+							android:layout_height="wrap_content">
+							
+							<LinearLayout
+								android:id="@+id/main_button_postsLimit"
+								android:layout_width="wrap_content"
+								android:layout_height="wrap_content"
+								android:layout_marginEnd="8dp"
+								android:clickable="true"
+								android:focusable="true"
+								android:foreground="@drawable/ripple_small_corners"
+								android:gravity="center"
+								android:orientation="horizontal"
+								android:paddingStart="10dp"
+								android:paddingTop="10dp"
+								android:paddingEnd="10dp"
+								android:paddingBottom="10dp"
+								app:layout_constraintBottom_toBottomOf="parent"
+								app:layout_constraintEnd_toEndOf="parent"
+								app:layout_constraintTop_toTopOf="parent"
+								app:layout_constraintVertical_bias="1.0"
+								tools:ignore="TouchTargetSizeCheck">
+								
+								<ImageView
+									android:id="@+id/main_image_postsLimit"
+									android:layout_width="wrap_content"
+									android:layout_height="wrap_content"
+									android:layout_marginEnd="10dp"
+									android:layout_weight="1"
+									android:src="@drawable/ic_baseline_widgets_24"/>
+								
+								<TextView
+									android:id="@+id/main_text_postsLimit"
+									android:layout_width="wrap_content"
+									android:layout_height="wrap_content"
+									android:layout_marginEnd="5dp"
+									android:layout_weight="1"
+									android:text="All Posts"/>
+								
+								<ImageView
+									android:layout_width="wrap_content"
+									android:layout_height="wrap_content"
+									android:layout_weight="1"
+									android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>
+							</LinearLayout>
+							
+							<com.google.android.material.textfield.TextInputLayout
+								android:id="@+id/textInputLayout"
+								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+								android:layout_width="0dp"
+								android:layout_height="45dp"
+								android:layout_marginEnd="16dp"
+								android:layout_marginBottom="2dp"
+								android:focusableInTouchMode="true"
+								app:layout_constraintBottom_toBottomOf="parent"
+								app:layout_constraintEnd_toStartOf="@+id/main_button_postsLimit"
+								app:layout_constraintStart_toStartOf="parent"
+								app:layout_constraintTop_toTopOf="parent"
+								app:startIconDrawable="@drawable/ic_baseline_search_24">
+								
+								<com.google.android.material.textfield.TextInputEditText
+									android:layout_width="match_parent"
+									android:layout_height="wrap_content"
+									android:hint="Search"
+									android:maxLines="1"
+									android:paddingTop="0dp"
+									android:paddingBottom="0dp"
+									tools:ignore="TouchTargetSizeCheck"/>
+							</com.google.android.material.textfield.TextInputLayout>
+						</androidx.constraintlayout.widget.ConstraintLayout>
+					
+					</androidx.appcompat.widget.Toolbar>
+				</com.google.android.material.appbar.AppBarLayout>
+				
+				<androidx.constraintlayout.widget.ConstraintLayout
+					android:id="@+id/main_layout_nothing"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:visibility="gone"
+					app:layout_behavior="@string/appbar_scrolling_view_behavior">
+					
+					<ImageView
+						android:id="@+id/imageView3"
+						android:layout_width="100dp"
+						android:layout_height="100dp"
+						android:src="@drawable/ic_baseline_public_24"
+						app:layout_constraintBottom_toBottomOf="parent"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintStart_toStartOf="parent"
+						app:layout_constraintTop_toTopOf="parent"
+						app:layout_constraintVertical_bias="0.35"/>
+					
+					<TextView
+						android:id="@+id/textView7"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="16dp"
+						android:text="Be the first"
+						android:textSize="24sp"
+						android:textStyle="bold"
+						app:layout_constraintEnd_toEndOf="@+id/imageView3"
+						app:layout_constraintStart_toStartOf="@+id/imageView3"
+						app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
+					
+					<TextView
+						android:id="@+id/textView8"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="Tell the rest"
+						android:textSize="24sp"
+						android:textStyle="bold"
+						app:layout_constraintEnd_toEndOf="@+id/textView7"
+						app:layout_constraintStart_toStartOf="@+id/textView7"
+						app:layout_constraintTop_toBottomOf="@+id/textView7"/>
+				</androidx.constraintlayout.widget.ConstraintLayout>
+				
+				<androidx.recyclerview.widget.RecyclerView
+					android:id="@+id/main_recyvlerView_list"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+			
+			</androidx.coordinatorlayout.widget.CoordinatorLayout>
 		</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+	
 	</androidx.constraintlayout.widget.ConstraintLayout>
 	
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
