--- a/app/src/main/res/menu/hone_menu.xml
+++ b/app/src/main/res/menu/hone_menu.xml
@@ -2,8 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 	<item
-		android:id="@+id/action_settings"
-		android:orderInCategory="100"
-		android:title="@string/action_settings"
-		app:showAsAction="never"/>
+		android:icon="@drawable/ic_baseline_refresh_24"
+		android:title="Refresh"
+		app:showAsAction="ifRoom"/>
 </menu>
