--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="purple_200">#FFBB86FC</color>
-	<color name="purple_500">#FF6200EE</color>
-	<color name="purple_700">#FF3700B3</color>
+	<color name="purple_200">#54C6EB</color>
+	<color name="purple_500">#06D6A0</color>
+	<color name="purple_700">#048A81</color>
 	<color name="teal_200">#FF03DAC5</color>
 	<color name="teal_700">#FF018786</color>
 	<color name="black">#FF000000</color>
@@ -25,4 +25,6 @@
 	<color name="bulletproof">#00c853</color>
 	
 	<color name="contrast_fab">#fff</color>
+	
+	
 </resources>
