--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,4 +33,14 @@
 		<item name="android:windowSoftInputMode">adjustResize</item>
 		<item name="android:background">@android:color/transparent</item>
 	</style>
+	
+	<style name="CustomizedBottomDialogStyle2">
+		<item name="android:windowBackground">@android:color/transparent</item>
+		<item name="android:backgroundDimEnabled">true</item>
+		<item name="android:backgroundDimAmount">0.7</item>
+		<item name="android:windowIsFloating">false</item>
+		<item name="android:windowAnimationStyle">@android:style/Animation.InputMethod</item>
+		<item name="android:statusBarColor">@android:color/transparent</item>
+		<item name="android:background">@android:color/transparent</item>
+	</style>
 </resources>
