--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,7 +33,7 @@
 					<androidx.appcompat.widget.Toolbar
 						android:layout_width="match_parent"
 						android:layout_height="match_parent"
-						app:layout_scrollFlags="scroll|enterAlways">
+						app:layout_scrollFlags="scroll|enterAlways|snap">
 						
 						<androidx.constraintlayout.widget.ConstraintLayout
 							android:id="@+id/main_layout_top"
@@ -62,8 +62,8 @@
 								
 								<ImageView
 									android:id="@+id/main_image_postsLimit"
-									android:layout_width="wrap_content"
-									android:layout_height="wrap_content"
+									android:layout_width="26dp"
+									android:layout_height="26dp"
 									android:layout_marginEnd="10dp"
 									android:layout_weight="1"
 									android:src="@drawable/ic_baseline_widgets_24"/>
@@ -115,7 +115,6 @@
 					android:id="@+id/main_layout_nothing"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
-					android:visibility="gone"
 					app:layout_behavior="@string/appbar_scrolling_view_behavior">
 					
 					<ImageView
@@ -157,6 +156,7 @@
 					android:id="@+id/main_recyvlerView_list"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
+					android:visibility="gone"
 					app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 			
 			</androidx.coordinatorlayout.widget.CoordinatorLayout>
