--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -25,7 +25,7 @@
 			app:contentInsetLeft="0dp"
 			app:contentInsetRight="0dp"
 			app:contentInsetStart="0dp"
-			app:layout_scrollFlags="scroll|snap">
+			app:layout_scrollFlags="scroll">
 			
 			<androidx.constraintlayout.widget.ConstraintLayout
 				android:layout_width="match_parent"
