--- a/app/src/main/res/layout/layout_bottom_modal_post_limit.xml
+++ b/app/src/main/res/layout/layout_bottom_modal_post_limit.xml
@@ -128,6 +128,55 @@
 			app:tint="@color/green"/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 	
+	
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:id="@+id/modalPostsLimit_layout_random"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginStart="20dp"
+		android:layout_marginEnd="20dp"
+		android:clickable="true"
+		android:focusable="true"
+		android:foreground="@drawable/ripple_small_corners">
+		
+		<ImageView
+			android:id="@+id/modalPostsLimit_image_random"
+			android:layout_width="24dp"
+			android:layout_height="24dp"
+			android:layout_marginStart="16dp"
+			android:layout_marginTop="16dp"
+			android:layout_marginBottom="16dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:srcCompat="@drawable/ic_baseline_dice_100"/>
+		
+		<TextView
+			android:id="@+id/modalPostsLimit_text_random"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_marginStart="16dp"
+			android:text="Random"
+			android:textSize="16sp"
+			app:layout_constraintBottom_toBottomOf="@+id/modalPostsLimit_image_random"
+			app:layout_constraintStart_toEndOf="@+id/modalPostsLimit_image_random"
+			app:layout_constraintTop_toTopOf="@+id/modalPostsLimit_image_random"/>
+		
+		<ImageView
+			android:id="@+id/modalPostsLimit_check_random"
+			android:layout_width="32dp"
+			android:layout_height="32dp"
+			android:layout_marginTop="8dp"
+			android:layout_marginEnd="24dp"
+			android:layout_marginBottom="8dp"
+			android:visibility="gone"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:srcCompat="@drawable/ic_baseline_check_24"
+			app:tint="@color/green"/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+	
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:id="@+id/modalPostsLimit_layout_following"
 		android:layout_width="match_parent"
